[package]
name = "rustping"
version = "0.1.1"
authors = ["Brian Martin <brayniac@gmail.com>"]

[dependencies.bytes]
git = "https://github.com/carllerche/bytes"
branch = "v0.2.x"

[dependencies.mio]
path = "./deps/mio/"

[dependencies]
log = "0.3.1"
simple_logger = "0.3.1"
time = "*"

[profiles.release]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1